Add CreatePostActivity and CreatePostViewModel with small changes
Changed activities where searching of data is to be done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,14 @@
         android:roundIcon="@drawable/app_capybara_logo_blue"
         android:supportsRtl="true"
         android:theme="@style/Theme.FingerTrip"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".CreatePostActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".PasswordResetActivity"
             android:exported="false" />
@@ -23,7 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
