--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
     implementation 'com.google.firebase:firebase-database:20.0.6'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
