--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,26 +13,26 @@
         android:theme="@style/Theme.FingerTrip"
         tools:targetApi="31">
         <activity
-            android:name=".CreateSocialProfileActivity"
+            android:name=".activities.CreateSocialProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ContactActivity"
+            android:name=".activities.ContactActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".PasswordResetActivity"
+            android:name=".activities.PasswordResetActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".activities.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".SignInActivity"
+            android:name=".activities.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
